# portfolio-deploy-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_agent.py  test_config.py  test_env.py  test_full_pipeline.py  test_llm.py  test_market.py
.github/workflows/: daily_analysis.yml
config/: portfolio_config.example.yaml  portfolio_config.yaml
dashboard/: app.py
data/: portfolio.db
src/.devcontainer/: devcontainer.json
src/graph/: nodes.py  state.py  workflow.py
src/models/: portfolio.py
src/notifications/: telegram_bot.py
src/tools/: database.py  market_data.py  portfolio_math.py
src/utils/: config_loader.py  llm_provider.py
tests/: test_portfolio_math.py
